# haskell-keymapp

./: README.md  cabal.project  default.nix  fourmolu.yaml  keymapp.nix  shell.nix
.github/workflows/: haskell.yml
examples/: README.md  keymapp-examples.cabal
examples/exe/: Clock.hs  Rainbow.hs
keymapp/: CHANGELOG.md  LICENSE  README.md  keymapp.cabal  led_mapping.md
keymapp/exe/: Main.hs
keymapp/src/Control/Keymapp/: API.hs  Client.hs
nix/: nixpkgs.nix  packages.nix  pre-commit.nix  sources.json
scripts/: generate-proto.nix
