cabal-version:      3.0
name:               keymapp-examples
version:            0.1.0
-- synopsis:
-- description:
license:            BSD-3-Clause
author:             Frederick Pringle
maintainer:         frederick.pringle@fpringle.com
copyright:          Copyright(c) Frederick Pringle 2026
homepage:           https://github.com/fpringle/keymapp
build-type:         Simple

common warnings
  ghc-options: -Wall -Wno-unused-do-bind

common deps
  build-depends:
    , base               >= 4.0 && < 5.0
    , grapesy            >= 1.1 && < 1.2
    , proto-lens         >= 0.7 && < 0.8
    , proto-lens-runtime >= 0.7 && < 0.8
    , text               >= 1.2 && < 2.2
    , mtl                >= 2.2 && < 2.4
    , colour             >= 2.3 && < 2.4
    , unliftio-core
    , exceptions

common extensions
  default-extensions:
    AllowAmbiguousTypes
    Arrows
    BangPatterns
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveGeneric
    DeriveTraversable
    DerivingVia
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    OverloadedStrings
    PackageImports
    PatternSynonyms
    PolyKinds
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UndecidableInstances
    ViewPatterns

executable keymapp-rainbow
  import:
      warnings
    , deps
    , extensions
  main-is:          Rainbow.hs
  -- other-modules:
  -- other-extensions:
  build-depends:
    , keymapp

  hs-source-dirs:   exe
  default-language: Haskell2010
