cabal-version:      3.0
name:               keymapp-examples
version:            0.1.0
-- synopsis:
-- description:
license:            BSD-3-Clause
author:             Frederick Pringle
maintainer:         frederick.pringle@fpringle.com
copyright:          Copyright(c) Frederick Pringle 2026
homepage:           https://github.com/fpringle/keymapp
build-type:         Simple

common warnings
  ghc-options: -Wall -Wno-unused-do-bind -Wunused-packages

common deps
  build-depends:
    , base               >= 4.0 && < 5.0
    , grapesy            >= 1.0 && < 1.2
    , colour             >= 2.3 && < 2.4
    , unliftio
    , unix

common extensions
  default-extensions:
    OverloadedStrings
    TupleSections

executable keymapp-rainbow
  import:
      warnings
    , deps
    , extensions
  main-is:          Rainbow.hs
  build-depends:
    , keymapp

  hs-source-dirs:   exe
  default-language: Haskell2010

executable keymapp-clock
  import:
      warnings
    , deps
    , extensions
  main-is:          Clock.hs
  build-depends:
    , keymapp
    , time

  hs-source-dirs:   exe
  default-language: Haskell2010
