cabal-version:      3.0
name:               keymapp
version:            0.1.0
synopsis:           gRPC client for the Keymapp API
description:        This library provides a client for interacting with the [Keymapp](https://blog.zsa.io/keymapp) API.
                    It can be used as a Haskell library, or via the provided CLI executable, which is inspired by [Kontroll](https://github.com/zsa/kontroll).
license:            BSD-3-Clause
license-file:       LICENSE
author:             Frederick Pringle
maintainer:         frederick.pringle@fpringle.com
copyright:          Copyright(c) Frederick Pringle 2026
homepage:           https://github.com/fpringle/haskell-keymapp
build-type:         Simple
category:           Control
extra-doc-files:    CHANGELOG.md
                    README.md

common warnings
  ghc-options: -Wall -Wno-unused-do-bind

common deps
  build-depends:
    , base               >= 4 && < 5
    , grapesy            >= 1.0 && < 1.2
    , proto-lens         >= 0.7 && < 0.8
    , proto-lens-runtime >= 0.7 && < 0.8
    , text               >= 1.2 && < 2.2
    , mtl                >= 2.2 && < 2.4
    , directory          >= 1.2.3 && < 1.4
    , colour             >= 2.3 && < 2.4
    , unliftio-core      >= 0.1.1 && < 0.3
    , exceptions         >= 0.10 && < 0.11

common extensions
  default-extensions:
    BangPatterns
    DerivingVia
    DataKinds
    GeneralizedNewtypeDeriving
    OverloadedStrings
    RecordWildCards
    TypeApplications
    TypeFamilies

library
  import:
      warnings
    , deps
    , extensions
  ghc-options: -Wunused-packages
  exposed-modules:
      Control.Keymapp.API
      Control.Keymapp.Client
  other-modules:
      Proto.Keymapp
  hs-source-dirs:   src, generated
  default-language: Haskell2010

executable keymapp
  import:
      warnings
    , deps
    , extensions
  main-is:          Main.hs
  build-depends:
    , keymapp
    , optparse-applicative >= 0.18 && < 0.20
    , prettyprinter >= 1.7 && < 1.8

  hs-source-dirs:   exe
  default-language: Haskell2010
